5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1811_2562.log
== TEST (2019-06-11 18:27:08) 
-- CODE:
from numpy import*
bilu=array(eval(input("vetor bilu: ")))
par=0
impar=0
i=0
while size(bilu)>1 :
	for v in bilu:
		if (v[i]%2==0):
			par= par +1
			i= i+ 1
		elif (v[i%!=0]):
			impar= impar + 1 
			i = i + 1

print(par)
print(impar)
print(size(bilu))
-- ERROR:
File "XXXX", line 11
    elif (v[i%!=0]):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:27:20) 
-- CODE:
from numpy import*
bilu=array(eval(input("vetor bilu: ")))
par=0
impar=0
i=0
while size(bilu)>1 :
	for v in bilu:
		if (v[i]%2==0):
			par= par +1
			i= i+ 1
		elif (v[i%2!=0]):
			impar= impar + 1 
			i = i + 1

print(par)
print(impar)
print(size(bilu))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:28:19) 
-- CODE:
from numpy import*
bilu=array(eval(input("vetor bilu: ")))
par=0
impar=0
i=0
while size(bilu)>1 :
	for v in bilu:
		if (bilu[i]%2==0):
			par= par +1
			i= i+ 1
		elif (bilu[i%2!=0]):
			impar= impar + 1 
			i = i + 1

print(par)
print(impar)
print(size(bilu))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:30:11) 
-- CODE:
from numpy import*
bilu=array(eval(input("vetor bilu: ")))
par=0
impar=0
i=0
while size(bilu)>1 :
	for i in bilu:
		if (bilu[i]%2==0):
			par= par +1
			i= i+ 1
		elif (bilu[i%2!=0]):
			impar= impar + 1 
			i = i + 1

print(par)
print(impar)
print(size(bilu))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:30:54) 
-- CODE:
from numpy import*
bilu=array(eval(input("vetor bilu: ")))
par=0
impar=0
c=0
while size(bilu)>1 :
	for i in bilu:
		if (bilu[i]%2==0):
			par= par +1
			c= c+ 1
		elif (bilu[i%2!=0]):
			impar= impar + 1 
			c = c + 1

print(par)
print(impar)
print(size(bilu))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:31:45) 
-- CODE:
from numpy import*
bilu=array(eval(input("vetor bilu: ")))
par=0
impar=0
c=0
while size(bilu)>1 :
	for i in bilu:
		if (bilu[c]%2==0):
			par= par +1
			c= c+ 1
		elif (bilu[i]%2!=0):
			impar= impar + 1 
			c = c + 1

print(par)
print(impar)
print(size(bilu))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:32:21) 
-- CODE:
from numpy import*
bilu=array(eval(input("vetor bilu: ")))
par=0
impar=0
c=0
while size(bilu)>1 :
	for i in bilu:
		if (bilu[c]%2==0):
			par= par +1
			c= c+ 1
		elif (bilu[c]%2!=0):
			impar= impar + 1 
			c = c + 1

print(par)
print(impar)
print(size(bilu))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:36:36) 
-- CODE:
from numpy import*
bilu=array(eval(input("vetor bilu: ")))

i=0
while size(bilu)>1 :
	par=0
	impar=0
	for v in bilu:
		if (bilu[i]%2==0):
			par= par + 1
			i= i + 1
		else:
			impar = impar + 1
			i= i + 1
	print(par)
	print(impar)
	print(size(bilu))
	bilu=array(eval(input("vetor bilu: ")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:37:01) 
-- CODE:
from numpy import*
bilu=array(eval(input("vetor bilu: ")))

i=0
while size(bilu)>1 :
	par=0
	impar=0
	for v in bilu:
		if (bilu[i]%2==0):
			par= par + 1
			i= i + 1
		else:
			impar = impar + 1
			i= i + 1
	print(par)
	print(impar)
	print(size(bilu))
	bilu=array(eval(input("vetor bilu: ")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:37:10) 
-- CODE:
from numpy import*
bilu=array(eval(input("vetor bilu: ")))

i=0
while size(bilu)>1 :
	par=0
	impar=0
	for v in bilu:
		if (bilu[i]%2==0):
			par= par + 1
			i= i + 1
		else:
			impar = impar + 1
			i= i + 1
	print(par)
	print(impar)
	print(size(bilu))
	bilu=array(eval(input("vetor bilu: ")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:38:16) 
-- CODE:
from numpy import*
bilu=array(eval(input("vetor bilu: ")))


while size(bilu)>1 :
	i=0
	par=0
	impar=0
	for v in bilu:
		if (bilu[i]%2==0):
			par= par + 1
			i= i + 1
		else:
			impar = impar + 1
			i= i + 1
	print(par)
	print(impar)
	print(size(bilu))
	bilu=array(eval(input("vetor bilu: ")))
	
-- EXECUTION TIME:
1.07311
-- TEST CASE 1:
---- input:
[-2,-3,-5,-6,-7,-8,-9,-10]
[1,3,5,7,9,11,13,15,17,19,21]
[2,6,10,14,18,22]
[1]
---- correct output:
4
4
8
0
11
11
6
0
6

---- user output:
4
4
8
0
11
11
6
0
6
-- TEST CASE 2:
---- input:
[1,1,1,1,1,1,1,1,1,1,1,1,0]
[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1]
[2,8,16,32,64,128,256,512,1024,2048]
[1]
---- correct output:
1
12
13
16
1
17
10
0
10

---- user output:
vetor bilu: 1
12
13
vetor bilu: 16
1
17
vetor bilu: 10
0
10
vetor bilu:
-- TEST CASE 3:
---- input:
[-1,1,-2,2,-3,3,-4,4,-5,5,-6,6,-7,7,-8,8,-9,9]
[-200,100,-201,101]
[1]
---- correct output:
8
10
18
2
2
4

---- user output:
vetor bilu: 8
10
18
vetor bilu: 2
2
4
vetor bilu:
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:38:47) 
-- CODE:
from numpy import*
bilu=array(eval(input("vetor bilu: ")))


while size(bilu)>1 :
	i=0
	par=0
	impar=0
	for v in bilu:
		if (bilu[i]%2==0):
			par= par + 1
			i= i + 1
		else:
			impar = impar + 1
			i= i + 1
	print(par)
	print(impar)
	print(size(bilu))
	bilu=array(eval(input("vetor bilu: ")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:39:35) 
-- CODE:
from numpy import*
bilu=array(eval(input("vetor bilu: ")))


while size(bilu)>1 :
	i=0
	par=0
	impar=0
	for v in bilu:
		if (bilu[i]%2==0):
			par= par + 1
			i= i + 1
		else:
			impar = impar + 1
			i= i + 1
	print(par)
	print(impar)
	print(size(bilu))
	bilu=array(eval(input("vetor bilu: ")))
	
-- EXECUTION TIME:
1.10447
-- TEST CASE 1:
---- input:
[-2,-3,-5,-6,-7,-8,-9,-10]
[1,3,5,7,9,11,13,15,17,19,21]
[2,6,10,14,18,22]
[1]
---- correct output:
4
4
8
0
11
11
6
0
6

---- user output:
4
4
8
0
11
11
6
0
6
-- TEST CASE 2:
---- input:
[1,1,1,1,1,1,1,1,1,1,1,1,0]
[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1]
[2,8,16,32,64,128,256,512,1024,2048]
[1]
---- correct output:
1
12
13
16
1
17
10
0
10

---- user output:
1
12
13
16
1
17
10
0
10
-- TEST CASE 3:
---- input:
[-1,1,-2,2,-3,3,-4,4,-5,5,-6,6,-7,7,-8,8,-9,9]
[-200,100,-201,101]
[1]
---- correct output:
8
10
18
2
2
4

---- user output:
8
10
18
2
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
